Fix geometry merging; stubs for distributed observations